--- a/styles/_bootstrap.scss
+++ b/styles/_bootstrap.scss
@@ -4,13 +4,14 @@ $grid-breakpoints: (
   sm: 480px,
   md: 640px,
   lg: 992px,
-  xl: 1300px
+  xl: 1300px,
 );
+
 $enable-rounded: false;
 
 // Then include the following
-@import 'bootstrap/scss/bootstrap.scss';
-@import 'bootstrap-vue/src/index.scss';
+@import "bootstrap/scss/bootstrap.scss";
+@import "bootstrap-vue/src/index.scss";
 
 // And define any of your custom or additional CSS/SCSS here,
 // or via an @import
