--- a/styles/_bootstrap.scss
+++ b/styles/_bootstrap.scss
@@ -1,18 +1,5 @@
-$container-max-widths: (
-  sm: 400px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px,
-);
-
 // Custom Bootstrap variable overrides go first
-$grid-breakpoints: (
-  xs: 0,
-  sm: 375px,
-  md: 640px,
-  lg: 992px,
-  xl: 1500px,
-);
+@import "./grid";
 
 // Then include the following
 @import "bootstrap/scss/bootstrap.scss";
